--- a/signup.html
+++ b/signup.html
@@ -432,7 +432,7 @@
           <div class="fText">You must verify your email before logging in. We’ll send a link instantly.</div>
           <ul class="list">
             <li>Check Spam/Junk + Promotions.</li>
-            <li>If you didn’t receive it, use the resend button on <a href="verify.html">verify.html</a>.</li>
+            <li>If you didn’t receive it, use the resend button on <a href="verify">verify.html</a>.</li>
           </ul>
         </div>
 
